# MCSoundsExtractor

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md  Resource.rc  compile-linux.sh  makefile  resource.h  windows.rc  windows.vcxproj  windows.vcxproj.filters
.github/workflows/: build.yml
boost/unix/lib/: libboost_filesystem.dylib
boost/unix/lib/cmake/boost_filesystem-1.70.0/: libboost_filesystem-variant-shared.cmake  libboost_filesystem-variant-static.cmake
boost/win/lib/: libboost_filesystem-vc141-mt-x32-1_70.lib  libboost_filesystem-vc141-mt-x64-1_70.lib
mac.xcodeproj/: project.pbxproj
mac.xcodeproj/project.xcworkspace/xcuserdata/main.xcuserdatad/: UserInterfaceState.xcuserstate
mac.xcodeproj/project.xcworkspace/xcuserdata/ravi.xcuserdatad/: UserInterfaceState.xcuserstate
mac.xcodeproj/xcshareddata/xcschemes/: AppDynamic.xcscheme  AppStatic.xcscheme
mac.xcodeproj/xcuserdata/ravi.xcuserdatad/xcschemes/: xcschememanagement.plist
rapidjson/: LICENSE.md
source/: Info.plist  Info_cocoa.plist  extractor.cpp  extractor.hpp  icon.xcf  interface.cpp  interface.h  main.cpp  resource1.h  windows.rc  wxlin.xpm  wxmac.icns
src/: extractor.cpp  main.cpp  wxlin.xpm
wxWidgets/tests/: test_gui.vcxproj.filters
